<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="masuk">Masuk</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sudah_punya_rekening">Sudah Punya Rekening?</string>
    <string name="belum_punya_rekening">Belum Punya Rekening</string>
    <string name="selamat_datang">Selamat Datang!</string>
    <string name="lanjut">Lanjut</string>
    <string name="no_hp">No Hp</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="buat_password">Buat Password</string>
    <string name="biodata">Biodata</string>
    <string name="nomor_ktp">Nomor KTP</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="atur_pin">Atur PIN</string>
    <string name="masukkan_6_digit_pin">Masukkan 6 digit PIN</string>
    <string name="konfirmasi_pin">Konfirmasi PIN</string>
    <string name="konfirmasi_6_digit_pin">Konfirmasi 6 digit PIN</string>
</resources>