<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    tools:context=".loginScreen.LoginFragment">

    <ImageView
        android:id="@+id/btn_kembali"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/back_button_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_masuk"
        style="@style/DisplayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/masuk"
        android:textColor="@color/primary_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_email"
        style="@style/BodyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="288dp"
        android:text="@string/email"
        android:textColor="@color/primary_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/neutral_02"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:expandedHintEnabled="false"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        app:placeholderText="example@gmail.com"
        app:placeholderTextAppearance="@style/BodyText"
        app:placeholderTextColor="@color/neutral_03">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiedt_email"
            style="@style/BodyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/neutral_09" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_password"
        style="@style/BodyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="370dp"
        android:text="@string/password"
        android:textColor="@color/primary_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/neutral_02"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:expandedHintEnabled="false"
        app:layout_constraintTop_toBottomOf="@+id/tv_password"
        app:passwordToggleEnabled="true"
        app:placeholderText="@string/password"
        app:placeholderTextAppearance="@style/BodyText"
        app:placeholderTextColor="@color/neutral_03">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiedt_password"
            style="@style/BodyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/neutral_09" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_masuk"
        style="@style/PrimaryActiveButton"
        android:layout_width="216dp"
        android:layout_height="48dp"
        android:layout_marginTop="494dp"
        android:text="@string/masuk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>